--- a/05_mirrorshades_design_implementation/experimental_plan.tex
+++ b/05_mirrorshades_design_implementation/experimental_plan.tex
@@ -28,6 +28,8 @@
 %=========================================================================================================
 %=========================================================================================================
 
+%Indoor Positioning - a roundup of such technologies is available in~\cite{Mautz2012}.
+
 \chapter{Introduction}
 This research centres around the design, development \& evaluation of a hardware \& software platform which allows its user to observe \& move around their Real World (RW) environment whilst wearing a wide field of view (FOV), stereoscopic 3D, Head Mounted Display (HMD) which allows them to alternatively view an immersive Virtual Reality (VR) environment from the equivalent vantage point. This is achieved by combining a head-tracked HMD, webcams, an indoor positioning system (IPS) \& a 3D game engine, into a mobile \textit{cross reality} (XR) interface.
 
