--- a/thesis.tex
+++ b/thesis.tex
@@ -20,7 +20,7 @@
 
 \usepackage{url}
 
-%for sourc code snippets1
+%for source code snippets
 \usepackage{listings}
 \usepackage{color}
 \definecolor{codebackground}{rgb}{0.9,0.9,0.9}
